package com.randioo.owlofwar_server_simplify_protobuf.protocol;
import "Login.proto";
import "Match.proto";
import "Fight.proto";
import "Pillage.proto";
import "Card.proto";
import "Ping.proto";
import "Market.proto";
import "War.proto";
import "Role.proto";

//30
message CSMessage{
	optional int32 type = 1 [default = 0];
	optional LoginCheckAccountRequest loginCheckAccountRequest=2;
	optional LoginCreateRoleRequest loginCreateRoleRequest=3;
	optional LoginGetRoleDataRequest loginGetRoleDataRequest=4;

	optional FightClientReadyRequest fightClientReadyRequest=5;
	optional FightLoadResourceCompleteRequest fightLoadResourceCompleteRequest=6;
	optional FightGameActionRequest fightGameActionRequest = 7;
	optional FightGameOverRequest fightGameOverRequest = 8;
	optional FightReadFrameRequest fightReadFrameRequest = 9;
	optional FightGetGameAwardRequest fightGetGameAwardRequest = 10;
	optional FightCountDownRequest fightCountDownRequest = 11;

	optional PillageRoleRequest pillageRoleRequest=12;
	optional PillageCancelRequest pillageCancelRequest =13;
	optional PillageShowRequest pillageShowRequest=14;
	optional PillageCompetitionNoticeRequest pillageCompetitionNoticeRequest = 30;

	optional CardGetCardsInfoRequest cardGetCardsInfoRequest = 15;
	optional CardEditCardListRequest cardEditCardListRequest = 16;
	optional CardLvUpRequest cardLvUpRequest = 17;
	optional CardChooseUseCardListRequest cardChooseUseCardListRequest = 18;
	optional CardChangeMainCardRequest cardChangeMainCardRequest = 19;

	optional PingRequest pingRequest = 20;
	
	//显示商品信息
	optional MarketShowMarketItemRequest marketShowMarketItemReqeust= 21;
	//购买商品
	optional MarketBuyMarketItemRequest marketBuyMarketItemRequest = 22;
	//手动刷新
	optional MarketArtificialRefreshRequest marketArtificialRefreshRequest = 23;

	//显示战场章节信息
	optional WarShowWarChapterRequest warShowWarChapterRequest = 24;
	//显示战场建筑信息
	optional WarShowWarBuildRequest warShowWarBuildRequest=25;
	//攻打建筑
	optional WarMarchRequest warMarchRequest = 26;	
	optional WarWinBuildRequest warWinBuildRequest = 27;	
	optional WarGetChapterAwardRequest warGetChapterAwardRequest = 28;
	
	optional RoleInfoSelectRequest roleInfoSelectRequest = 29;
}